# rusty_cmake

./: CMakeLists.txt
src/: CMakeLists.txt
src/rusty_code/: Cargo.toml  build.rs
